--- a/finding_gender_direction/Finding_conceptual_direction_Gender_Leo_Dana.ipynb
+++ b/finding_gender_direction/Finding_conceptual_direction_Gender_Leo_Dana.ipynb
@@ -31,6 +31,7 @@
       },
       "outputs": [],
       "source": [
+        "import pandas as pd\n",
         "import torch\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -173,11 +174,92 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Load Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "Train = pd.read_csv(\"Train_Data.csv\")\n",
+        "\n",
+        "D_1 = Train[Train['data_num'] == 1]\n",
+        "D_2 = Train[Train['data_num'] == 2]\n",
+        "Train_1 = list(D_1[D_1['train'] == 1]['examples'])\n",
+        "Train_2 = list(D_2[D_2['train'] == 1]['examples'])\n",
+        "Test_1 = list(D_1[D_1['train'] == 0]['examples'])\n",
+        "Test_2 = list(D_2[D_2['train'] == 0]['examples'])\n",
+        "Data_m_1 = list(D_1[D_1['gender'] == 1]['examples'])\n",
+        "Data_f_1 = list(D_1[D_1['gender'] == -1]['examples'])\n",
+        "Data_1 = list(D_1)\n",
+        "Data_2 = list(D_2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "Test = pd.read_csv(\"Test_Data.csv\")\n",
+        "\n",
+        "example_prompts_A = list(Test[Test['data_num'] == 'a']['question'])\n",
+        "example_prompts_B = list(Test[Test['data_num'] == 'b']['question'])\n",
+        "example_prompts_C = list(Test[Test['data_num'] == 'c']['question'])\n",
+        "example_prompts_D = list(Test[Test['data_num'] == 'd']['question'])\n",
+        "\n",
+        "target_tokens_A = tokenizer(list(Test[Test['data_num'] == 'a']['target'])).input_ids\n",
+        "target_tokens_B = tokenizer(list(Test[Test['data_num'] == 'b']['target'])).input_ids\n",
+        "target_tokens_C = tokenizer(list(Test[Test['data_num'] == 'c']['target'])).input_ids\n",
+        "target_tokens_D = tokenizer(list(Test[Test['data_num'] == 'd']['target'])).input_ids"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#list of tokens counted as \"good\" answers\n",
+        "text_lists = [[\"he\", \" he\", \"He\", \" He\",\n",
+        "                 \"him\", \" him\", \"Him\", \" Him\",\n",
+        "                 \"his\", \" his\", \"His\", \" His\",\n",
+        "                 \"male\", \" male\", \"Male\", \" Male\",\n",
+        "                 \"son\", \" son\", \"Son\", \" Son\",\n",
+        "                 \"father\", \" father\", \"Father\", \" Father\",\n",
+        "                 \"boy\", \" boy\", \"Boy\", \" Boy\",\n",
+        "                 ],\n",
+        "              [\"she\", \" she\", \"She\", \" She\",\n",
+        "               \"her\", \" her\", \"Her\", \" Her\",\n",
+        "               \"female\", \" female\", \"Female\", \" Female\",\n",
+        "               \"daugther\", \" daugther\", \"Daugther\", \" Daugther\",\n",
+        "               \"mother\", \" mother\", \"Mother\", \" Mother\",\n",
+        "               \"girl\", \" girl\", \"girl\", \" girl\",]]\n",
+        "token_lists = tokenizer(text_lists).input_ids\n",
+        "token_lists = [[[token[0]] for token in token_lists[0]], [[token[0]] for token in token_lists[1]]]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "i7lqLX6ak2FE"
       },
       "source": [
-        "# Learning Hyperplane Leace + Probe"
+        "# Learning and Testing Hyperplane"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We learn the leace direction for the mean, quantile and for the Logistic Regression. \n",
+        "The number is the Data number (1 = words, 2 = names). By default they are learnt after the layer norm of the attention module, but $res$ means the direction is learnt in the residual stream directly. In this case, we don't learn the Logistic Regression because it diverges (This could be fixed but is unimportant).\\\n",
+        "\\\n",
+        "We can learn on the full dataset, or only on a subset: for the full, use $Data$, otherwise $Train$. For the secod dataset, we want to use $Train_2$ because $Test_2 = Data_2-Train_2$. "
       ]
     },
     {
@@ -190,30 +272,22 @@
         "id": "CD2iAA7qD1JP",
         "outputId": "f47b4321-82b4-4b6d-aea5-214b5a245ce3"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 48/48 [02:37<00:00,  3.28s/it]\n",
-            "100%|██████████| 48/48 [01:13<00:00,  1.53s/it]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "#Learn the estimators\n",
+        "# Learn the estimators on the attention\n",
         "eraser_mean_1, eraser_quantile_1, eraser_probe_1 = store_test_hyperplane.storing_hyperplanes(Data_1, post_layer_norm = True)\n",
-        "eraser_mean_1_res, eraser_quantile_1_res, eraser_probe_1_res = store_test_hyperplane.storing_hyperplanes(Data_1, post_layer_norm = False)\n",
-        "eraser_mean_2, eraser_quantile_2, eraser_probe_2 = store_test_hyperplane.storing_hyperplanes(Train_2, post_layer_norm = True)"
+        "eraser_mean_2, eraser_quantile_2, eraser_probe_2 = store_test_hyperplane.storing_hyperplanes(Train_2, post_layer_norm = True)\n",
+        "\n",
+        "# Learning the estimators in the residual stream\n",
+        "eraser_mean_1_res, eraser_quantile_1_res, _ = store_test_hyperplane.storing_hyperplanes(Data_1, post_layer_norm = False)\n",
+        "eraser_mean_2_res, eraser_quantile_2_res, _ = store_test_hyperplane.storing_hyperplanes(Train_2, post_layer_norm = False)"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "hr1ih_8Rqdoh"
-      },
+      "metadata": {},
       "source": [
-        "# Hyperplane Probes Eval"
+        "We can now measure, at each layer, the accuracy of our hyperplane! "
       ]
     },
     {
@@ -226,15 +300,7 @@
         "id": "xceRSHsVz2YZ",
         "outputId": "234102e1-8224-4f95-e1f4-e1fdfc502fc2"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 48/48 [00:59<00:00,  1.23s/it]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "metric_q = utils.leace_eval(eraser_quantile_1)\n",
         "metric_m = utils.leace_eval(eraser_mean_1)\n",
@@ -368,7 +434,19 @@
         "id": "ELn5Qq3EmOe_"
       },
       "source": [
-        "# Learning Direction Probe"
+        "# Learning and Testing Directions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Similarly to the last section, we learn the leace and Logistic direction but this time on pairs of example instead of examples directly.\\ \n",
+        "$Y = X_{male} - X_{female}$\\\n",
+        "\\\n",
+        "Thus:\n",
+        "* we need paired examples, thus we can't use the dataset 2,\n",
+        "* we have $b_{mean} = b_{quantile} = 0$,"
       ]
     },
     {
@@ -381,26 +459,9 @@
         "id": "-seP6kcLpMwc",
         "outputId": "60d0c9c8-2eeb-42e6-e431-ddf08d734cb9"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 48/48 [01:40<00:00,  2.09s/it]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "eraser_dir_mean_1, eraser_dir_probe_1 = store_test_hyperplane.storing_directions([[Data_m_1], [Data_f_1]], post_layer_norm = True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pBu-UXX4mT1I"
-      },
-      "source": [
-        "# Direction Probe Eval"
       ]
     },
     {
@@ -463,37 +524,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_PDj6Iz7NfgK"
-      },
-      "source": [
-        "# Verifying Testing sets\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "D7G-J_pVbxr2",
-        "outputId": "463a10bf-425c-4a3b-b8af-8853df8371dd"
-      },
-      "outputs": [],
-      "source": [
-        "#code to easily implement the visualasation\n",
-        "prompts = example_prompts_C\n",
-        "\n",
-        "tokenized_sentences = [tokenizer(prompt, return_tensors = 'pt')[\"input_ids\"].to(device) for prompt in prompts]\n",
-        "\n",
-        "for tokenized_sentence, prompt in zip(tokenized_sentences, prompts):\n",
-        "  print(prompt)\n",
-        "  #print(show_proba(torch.softmax(model(tokenized_sentence).logits[0, -1], dim = -1), nb_tokens = 5, decode = True))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Cf73zWeeU81E"
       },
       "source": [
@@ -506,22 +536,28 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "#Visualise if the test examples have good probability / accuracy\n",
+        "prompts = example_prompts_A\n",
+        "test_prompt = False\n",
+        "\n",
+        "if test_prompt:\n",
+        "  tokenized_sentences = [tokenizer(prompt, return_tensors = 'pt')[\"input_ids\"].to(device) for prompt in prompts]\n",
+        "\n",
+        "  for tokenized_sentence, prompt in zip(tokenized_sentences, prompts):\n",
+        "    print(prompt)\n",
+        "    print(utils.show_proba(torch.softmax(model(tokenized_sentence).logits[0, -1], dim = -1), nb_tokens = 5, decode = True))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#We compute all of the leace fitters and erasers\n",
         "nb_layers = len(model.transformer.h)\n",
         "layer_list = [[i for i in range(0, 9)]]\n",
         "layer_res_list = [[10]]\n",
-        "\n",
-        "token_lists = tokenizer(text_lists).input_ids\n",
-        "target_tokens_A = token_lists\n",
-        "target_tokens_B = token_lists\n",
-        "target_tokens_C = tokenizer(target_text_C).input_ids\n",
-        "target_tokens_D = tokenizer(target_text_D).input_ids\n",
-        "target_tokens_A += target_tokens_A\n",
-        "target_tokens_B += target_tokens_B\n",
-        "target_tokens_C += target_tokens_C\n",
-        "target_tokens_D += target_tokens_D\n",
-        "\n",
-        "token_lists = [[[token[0]] for token in token_lists[0]], [[token[0]] for token in token_lists[1]]]\n",
         "lbds = torch.Tensor([i/10 for i in range(0, 61, 1)])\n",
         "\n",
         "attention_only = True"
@@ -540,11 +576,8 @@
       "outputs": [],
       "source": [
         "score_A = inference_time_modification.fast_score(example_prompts_A, token_lists, eraser_mean_1, eraser_mean_1_res, target_tokens_A, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
-        "#score_B = inference_time_modification.fast_score(example_prompts_B, token_lists, eraser_mean_1, eraser_mean_1_res, target_tokens_B, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
-        "#score_C = inference_time_modification.fast_score(example_prompts_C, token_lists, eraser_mean_1, eraser_mean_1_res, target_tokens_C, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
-        "#score_A = inference_time_modification.fast_score(example_prompts_A, token_lists, eraser_mean_2, eraser_mean_2_res, target_tokens_A, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
-        "#score_B = inference_time_modification.fast_score(example_prompts_B, token_lists, eraser_mean_2, eraser_mean_2_res, target_tokens_B, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
-        "#score_C = inference_time_modification.fast_score(example_prompts_C, token_lists, eraser_mean_2, eraser_mean_2_res, target_tokens_C, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)"
+        "score_B = inference_time_modification.fast_score(example_prompts_B, token_lists, eraser_mean_1, eraser_mean_1_res, target_tokens_B, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)\n",
+        "score_C = inference_time_modification.fast_score(example_prompts_C, token_lists, eraser_mean_2, eraser_mean_2_res, target_tokens_C, layer_list, layer_res_list, lbds = lbds, attention_only = attention_only)"
       ]
     },
     {
@@ -555,6 +588,7 @@
       },
       "outputs": [],
       "source": [
+        "#just in case come hook is problematic\n",
         "for module in model.transformer.h:\n",
         "  module._forward_pre_hooks.clear()\n",
         "  module.attn._forward_pre_hooks.clear()\n",
@@ -574,6 +608,7 @@
       },
       "outputs": [],
       "source": [
+        "#Plots the graphs depending if we intervene in attention or not.\n",
         "\n",
         "if attention_only:\n",
         "    fig, axes = plt.subplots(1, 2, figsize=(10, 5), sharex = True, sharey = True)\n",
@@ -606,12 +641,13 @@
         "\n",
         "else:\n",
         "    fig, axes = plt.subplots(1, 2, figsize=(10, 5), sharex = True)\n",
+        "    score = score_A\n",
         "\n",
         "    probas = [torch.mean(torch.cat(score, dim = 0), dim = -1) for score in score]\n",
         "\n",
         "    for i, proba in enumerate(probas):\n",
-        "        axes[0].plot(layer_list, [g[0].item() for g in proba], label = 'lambda {}'.format(lbds[i]), color=colormap(i/N))\n",
-        "        axes[0].plot(layer_list, [g[1].item() for g in proba], color=colormap(i/N))\n",
+        "        axes[0].plot(layer_list, [g[0].item() for g in proba], label = 'lambda {}'.format(lbds[i]), color = plt.colormap(i/N))\n",
+        "        axes[0].plot(layer_list, [g[1].item() for g in proba], color = plt.colormap(i/N))\n",
         "    axes[0].set_title(\"Probability after gender steering\")\n",
         "    axes[0].set_xlabel(\"Layer\")\n",
         "    axes[0].set_ylabel(\"Probability\")\n",
@@ -620,7 +656,7 @@
         "    accs = [torch.mean(torch.Tensor([[1 if (score_l[1] - score_l[0])*dir > 0 else 0 for score_l in sub_score.T] for sub_score in score]), dim = -1) for score in score]\n",
         "\n",
         "    for i, acc in enumerate(accs):\n",
-        "        axes[1].plot(layer_list, acc, label = 'lambda {}'.format(lbds[i]), color=colormap(i/N))\n",
+        "        axes[1].plot(layer_list, acc, label = 'lambda {}'.format(lbds[i]), color = plt.colormap(i/N))\n",
         "    axes[1].set_title(\"Accuracy after gender steering\")\n",
         "    axes[1].set_xlabel(\"Layer\")\n",
         "    axes[1].set_ylabel(\"Accuracy\")\n",
@@ -675,7 +711,7 @@
         "\n",
         "  example_tokens = tokenizer(example, return_tensors = 'pt')[\"input_ids\"].to(device)\n",
         "  target_tokens = [tokenizer(text).input_ids for text in target_text]\n",
-        "  stream_indices, example_indices, stream_example_indices = finds_indices(example_tokens, target_tokens)\n",
+        "  stream_indices, example_indices, stream_example_indices = utils.finds_indices(example_tokens, target_tokens)\n",
         "\n",
         "  hook_flag = []\n",
         "  for layer in hook_layer:\n",
