Modif after test 1

--- a/finding_gender_direction/exp_notebook.ipynb
+++ b/finding_gender_direction/exp_notebook.ipynb
@@ -2,6 +2,20 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This Notebook allows you to reproduces my experiments easily on google colab. \\\n",
+        "\\\n",
+        "ToDo: To do so, you need to have the following files downloaded into the colab space (this will be modified).\n",
+        "* Train_Data.csv\n",
+        "* Test_Data.csv\n",
+        "* inference_time_modification.py\n",
+        "* store_test_hyperplane.py\n",
+        "* utils.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9Hmxa7JqTbcu"
       },
@@ -165,8 +179,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import Train_Data\n",
-        "import Test_Data\n",
         "import utils\n",
         "import store_test_hyperplane\n",
         "import inference_time_modification"
@@ -189,14 +201,24 @@
         "\n",
         "D_1 = Train[Train['data_num'] == 1]\n",
         "D_2 = Train[Train['data_num'] == 2]\n",
-        "Train_1 = list(D_1[D_1['train'] == 1]['examples'])\n",
-        "Train_2 = list(D_2[D_2['train'] == 1]['examples'])\n",
-        "Test_1 = list(D_1[D_1['train'] == 0]['examples'])\n",
-        "Test_2 = list(D_2[D_2['train'] == 0]['examples'])\n",
-        "Data_m_1 = list(D_1[D_1['gender'] == 1]['examples'])\n",
-        "Data_f_1 = list(D_1[D_1['gender'] == -1]['examples'])\n",
-        "Data_1 = list(D_1)\n",
-        "Data_2 = list(D_2)"
+        "Train_1 = D_1[D_1['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Train_2 = D_2[D_2['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Test_1 = D_1[D_1['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Test_2 = D_2[D_2['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Data_m_1 = D_1[D_1['gender'] == 1]['examples'].values.tolist()\n",
+        "Data_f_1 = D_1[D_1['gender'] == -1]['examples'].values.tolist()\n",
+        "Data_1 = D_1.loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Data_2 = D_2.loc[:, ['examples', 'gender']].values.tolist()\n",
+        "\n",
+        "#batching\n",
+        "batch_size = 1024\n",
+        "Nb_ex = len(Train_1)\n",
+        "Nb_batch = Nb_ex//batch_size + 1\n",
+        "Train_1 = [Train_1[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]\n",
+        "\n",
+        "Nb_ex = len(Data_1)\n",
+        "Nb_batch = Nb_ex//batch_size + 1\n",
+        "Data_1 = [Data_1[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]"
       ]
     },
     {
@@ -239,7 +261,7 @@
         "               \"daugther\", \" daugther\", \"Daugther\", \" Daugther\",\n",
         "               \"mother\", \" mother\", \"Mother\", \" Mother\",\n",
         "               \"girl\", \" girl\", \"girl\", \" girl\",]]\n",
-        "token_lists = tokenizer(text_lists).input_ids\n",
+        "token_lists = [tokenizer(text_list).input_ids for text_list in text_lists]\n",
         "token_lists = [[[token[0]] for token in token_lists[0]], [[token[0]] for token in token_lists[1]]]"
       ]
     },
@@ -275,7 +297,7 @@
       "outputs": [],
       "source": [
         "# Learn the estimators on the attention\n",
-        "eraser_mean_1, eraser_quantile_1, eraser_probe_1 = store_test_hyperplane.storing_hyperplanes(Data_1, post_layer_norm = True)\n",
+        "eraser_mean_1, eraser_quantile_1, eraser_probe_1 = store_test_hyperplane.storing_hyperplanes(Data_1, post_layer_norm = True, **dict)\n",
         "eraser_mean_2, eraser_quantile_2, eraser_probe_2 = store_test_hyperplane.storing_hyperplanes(Train_2, post_layer_norm = True)\n",
         "\n",
         "# Learning the estimators in the residual stream\n",
@@ -302,15 +324,11 @@
       },
       "outputs": [],
       "source": [
-        "metric_q = utils.leace_eval(eraser_quantile_1)\n",
-        "metric_m = utils.leace_eval(eraser_mean_1)\n",
-        "metric_p = utils.leace_eval(eraser_probe_1)\n",
+        "metric_q_1 = utils.leace_eval(eraser_quantile_1)\n",
+        "metric_m_1 = utils.leace_eval(eraser_mean_1)\n",
+        "metric_p_1 = utils.leace_eval(eraser_probe_1)\n",
         "\n",
-        "acc_data = store_test_hyperplane.hyperplane_acc(Data_1, [metric_q, metric_m, metric_p])\n",
-        "\n",
-        "acc_data_q = acc_data[0]\n",
-        "acc_data_m = acc_data[1]\n",
-        "acc_data_p = acc_data[2]"
+        "acc_data_1 = store_test_hyperplane.hyperplane_acc(Data_1, [metric_q_1, metric_m_1, metric_p_1])"
       ]
     },
     {
@@ -341,9 +359,9 @@
         "\n",
         "fig, axes = plt.subplots(1, 1, figsize=(5, 5), sharex = True, sharey = True)\n",
         "\n",
-        "axes.plot(acc_data_q, label = 'Quantile hyperplane')\n",
-        "axes.plot(acc_data_m, label = 'Mean hyperplane')\n",
-        "axes.plot(acc_data_p, label = 'Logistic hyperplane')\n",
+        "axes.plot(acc_data_1[0], label = 'Quantile hyperplane')\n",
+        "axes.plot(acc_data_1[1], label = 'Mean hyperplane')\n",
+        "axes.plot(acc_data_1[2], label = 'Logistic hyperplane')\n",
         "axes.plot([0, nb_layers-1],[0.5, 0.5], color = 'black', label = 'Random hyperplane')\n",
         "axes.set_title(\"Hyperplanes' accuracy on gendered words\")\n",
         "axes.set_xlabel(\"Layer\")\n",
@@ -375,15 +393,11 @@
         }
       ],
       "source": [
-        "metric_q = utils.leace_eval(eraser_quantile_2)\n",
-        "metric_m = utils.leace_eval(eraser_mean_2)\n",
-        "metric_p = utils.leace_eval(eraser_probe_2)\n",
+        "metric_q_2 = utils.leace_eval(eraser_quantile_2)\n",
+        "metric_m_2 = utils.leace_eval(eraser_mean_2)\n",
+        "metric_p_2 = utils.leace_eval(eraser_probe_2)\n",
         "\n",
-        "acc_data = store_test_hyperplane.hyperplane_acc(Data_2, [metric_q, metric_m, metric_p])\n",
-        "\n",
-        "acc_data_q = acc_data[0]\n",
-        "acc_data_m = acc_data[1]\n",
-        "acc_data_p = acc_data[2]"
+        "acc_data_2 = store_test_hyperplane.hyperplane_acc(Data_2, [metric_q_2, metric_m_2, metric_p_2])"
       ]
     },
     {
@@ -414,9 +428,9 @@
         "\n",
         "fig, axes = plt.subplots(1, 1, figsize=(5, 5), sharex = True, sharey = True)\n",
         "\n",
-        "axes.plot(acc_data_q, label = 'Quantile hyperplane')\n",
-        "axes.plot(acc_data_m, label = 'Mean hyperplane')\n",
-        "axes.plot(acc_data_p, label = 'Logistic hyperplane')\n",
+        "axes.plot(acc_data_2[0], label = 'Quantile hyperplane')\n",
+        "axes.plot(acc_data_2[1], label = 'Mean hyperplane')\n",
+        "axes.plot(acc_data_2[2], label = 'Logistic hyperplane')\n",
         "axes.plot([0, nb_layers-1],[0.5, 0.5], color = 'black', label = 'Random hyperplane')\n",
         "axes.set_title(\"Hyperplanes' accuracy on gendered names\")\n",
         "axes.set_xlabel(\"Layer\")\n",
