final modification colab

--- a/finding_gender_direction/exp_notebook.ipynb
+++ b/finding_gender_direction/exp_notebook.ipynb
@@ -635,7 +635,7 @@
       },
       "outputs": [],
       "source": [
-        "#Plots the graphs depending if we intervene in attention or not.\n",
+        "#Plots the graphs depending if we intervene in the attention or not.\n",
         "\n",
         "if attention_only:\n",
         "    fig, axes = plt.subplots(1, 2, figsize=(10, 5), sharex = True, sharey = True)\n",
@@ -701,6 +701,16 @@
       },
       "source": [
         "# Continuation Modification"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We test here the modification of the sentence at inference time. \\\n",
+        "Given a sentence, and words to intervene on, we look at continutations to see if there is any effect or not. \\\n",
+        "\\\n",
+        "WORK IN PROGRESS"
       ]
     },
     {
