--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -2,20 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This Notebook allows you to reproduces my experiments easily on google colab. \\\n",
-        "\\\n",
-        "ToDo: To do so, you need to have the following files downloaded into the colab space (this will be modified).\n",
-        "* Train_Data.csv\n",
-        "* Test_Data.csv\n",
-        "* inference_time_modification.py\n",
-        "* store_test_hyperplane.py\n",
-        "* utils.py"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "9Hmxa7JqTbcu"
       },
@@ -36,6 +22,22 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#import the useful libraries if you are working on google colab\n",
+        "\n",
+        "in_colab = True\n",
+        "if not in_colab:\n",
+        "    !git clone https://github.com/leodana2000/finding-gender-direction.git\n",
+        "    !pip install transformers\n",
+        "    !pip install accelerate\n",
+        "    !pip install concept-erasure"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,15 +51,19 @@
         "import torch\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import sklearn\n",
-        "from functools import reduce\n",
-        "import scipy\n",
-        "import itertools\n",
-        "import seaborn as sns\n",
-        "from datasets import load_dataset\n",
         "from transformers import GPT2TokenizerFast, GPT2LMHeadModel\n",
         "\n",
-        "cosim = torch.nn.CosineSimilarity(-1)"
+        "if in_colab:\n",
+        "    import sys\n",
+        "    sys.path.append(\"/content/finding-gender-direction\")\n",
+        "\n",
+        "    from finding_gender_direction import utils\n",
+        "    from finding_gender_direction import store_test_hyperplane\n",
+        "    from finding_gender_direction import inference_time_modification\n",
+        "else:\n",
+        "    import utils\n",
+        "    import store_test_hyperplane\n",
+        "    import inference_time_modification"
       ]
     },
     {
@@ -165,23 +171,12 @@
         "device = torch.device('cuda') #to be replaced by 'cpu' if no 'cuda' is available.\n",
         "model.to(device)\n",
         "tokenizer.pad_token = tokenizer(\" \\xa0\")\n",
-        "\n",
+        "cosim = torch.nn.CosineSimilarity(-1)\n",
         "dict = {\n",
         "    'device': device,\n",
         "    'model': model,\n",
         "    'tokenizer': tokenizer,\n",
         "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import utils\n",
-        "import store_test_hyperplane\n",
-        "import inference_time_modification"
       ]
     },
     {
