--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -31,8 +31,7 @@
         "if not in_colab:\n",
         "    !git clone https://github.com/leodana2000/finding-gender-direction.git\n",
         "    !pip install transformers\n",
-        "    !pip install accelerate\n",
-        "    !pip install concept-erasure"
+        "    !pip install accelerate"
       ]
     },
     {
@@ -57,13 +56,9 @@
         "    import sys\n",
         "    sys.path.append(\"/content/finding-gender-direction\")\n",
         "\n",
-        "    from finding_gender_direction import utils\n",
-        "    from finding_gender_direction import store_test_hyperplane\n",
-        "    from finding_gender_direction import inference_time_modification\n",
-        "else:\n",
-        "    import utils\n",
-        "    import store_test_hyperplane\n",
-        "    import inference_time_modification"
+        "from hyperplane_computation import utils\n",
+        "from hyperplane_computation import store_test_hyperplane\n",
+        "from hyperplane_computation import inference_time_modification"
       ]
     },
     {
