big changes over

--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -21,14 +21,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "in_colab = 'google.colab' in sys.modules"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "#import the useful libraries if you are working on google colab\n",
-        "\n",
-        "in_colab = True\n",
-        "if not in_colab:\n",
+        "if in_colab:\n",
         "    !git clone https://github.com/leodana2000/finding-gender-direction.git\n",
         "    !pip install transformers\n",
         "    !pip install accelerate"
@@ -36,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,24 +52,14 @@
         "id": "xaN_GiUSr--I",
         "outputId": "9a4888cb-e1f6-48ce-b5d2-cc90c5c0ecdd"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'sklearn'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\léo\\Desktop\\Travail\\Informatique\\GitHub\\finding-gender-direction\\exp_notebook.ipynb Cell 4\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/l%C3%A9o/Desktop/Travail/Informatique/GitHub/finding-gender-direction/exp_notebook.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhyperplane_computation\u001b[39;00m \u001b[39mimport\u001b[39;00m utils\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/l%C3%A9o/Desktop/Travail/Informatique/GitHub/finding-gender-direction/exp_notebook.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhyperplane_computation\u001b[39;00m \u001b[39mimport\u001b[39;00m inference_time_modification\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/l%C3%A9o/Desktop/Travail/Informatique/GitHub/finding-gender-direction/exp_notebook.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhyperplane_computation\u001b[39;00m \u001b[39mimport\u001b[39;00m store_test_hyperplane\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/l%C3%A9o/Desktop/Travail/Informatique/GitHub/finding-gender-direction/exp_notebook.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/l%C3%A9o/Desktop/Travail/Informatique/GitHub/finding-gender-direction/exp_notebook.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n",
-            "File \u001b[1;32mc:\\Users\\léo\\Desktop\\Travail\\Informatique\\GitHub\\finding-gender-direction\\hyperplane_computation\\store_test_hyperplane.py:8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhyperplane_computation\u001b[39;00m \u001b[39mimport\u001b[39;00m utils\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconcept_erasure\u001b[39;00m \u001b[39mimport\u001b[39;00m leace \u001b[39m#to change\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlinear_model\u001b[39;00m \u001b[39mimport\u001b[39;00m LogisticRegression\n\u001b[0;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstoring_hyperplanes\u001b[39m(dataset : \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m], post_layer_norm \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mdict\u001b[39m):\n\u001b[0;32m     11\u001b[0m   device \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mdevice\u001b[39m\u001b[39m'\u001b[39m]\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "if in_colab:\n",
-        "    import sys\n",
         "    sys.path.append(\"/content/finding-gender-direction\")\n",
+        "else:\n",
+        "    #use your own PATH\n",
+        "    PATH = None\n",
+        "    sys.path.append(PATH)\n",
         "\n",
         "from hyperplane_computation import utils\n",
         "from hyperplane_computation import inference_time_modification\n",
@@ -176,10 +174,13 @@
       },
       "outputs": [],
       "source": [
-        "device = torch.device('cuda') #to be replaced by 'cpu' if no 'cuda' is available.\n",
+        "if torch.cuda.is_available():\n",
+        "    device = torch.device('cuda')\n",
+        "else:\n",
+        "    device = torch.device('cpu')\n",
+        "\n",
         "model.to(device)\n",
-        "tokenizer.pad_token = tokenizer(\" \\xa0\")\n",
-        "cosim = torch.nn.CosineSimilarity(-1)\n",
+        "\n",
         "dict = {\n",
         "    'device': device,\n",
         "    'model': model,\n",
