--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -203,8 +203,8 @@
       "source": [
         "Train = pd.read_csv(\"Train_Data.csv\")\n",
         "\n",
-        "D_1 = Train[Train['data_num'] == 1]\n",
-        "D_2 = Train[Train['data_num'] == 2]\n",
+        "D_1 = Train[Train['data_num'] == 'noun' or Train['data_num'] == 'pronoun' or Train['data_num'] == 'anatomy']\n",
+        "D_2 = Train[Train['data_num'] == 'name']\n",
         "Train_1 = D_1[D_1['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
         "Train_2 = D_2[D_2['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
         "Test_1 = D_1[D_1['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
