changes for batches in hyperplanes

--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -201,32 +201,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "Train = pd.read_csv(\"Train_Data.csv\")\n",
+        "D = pd.read_csv(\"Train_Data.csv\")\n",
         "\n",
-        "D_1 = Train[Train['data_num'] == 'noun' or Train['data_num'] == 'pronoun' or Train['data_num'] == 'anatomy']\n",
-        "D_2 = Train[Train['data_num'] == 'name']\n",
-        "Train_1 = D_1[D_1['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
-        "Train_2 = D_2[D_2['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
-        "Test_1 = D_1[D_1['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
-        "Test_2 = D_2[D_2['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
-        "Data_m_1 = D_1[D_1['gender'] == 1]['examples'].values.tolist()\n",
-        "Data_f_1 = D_1[D_1['gender'] == -1]['examples'].values.tolist()\n",
-        "Data_1 = D_1.loc[:, ['examples', 'gender']].values.tolist()\n",
-        "Data_2 = D_2.loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Train = D[D['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Test = D[D['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Data_m = D[D['gender'] == 1]['examples'].values.tolist()\n",
+        "Data_f = D[D['gender'] == -1]['examples'].values.tolist()\n",
+        "Data = D.loc[:, ['examples', 'gender', 'data_num']].values.tolist()\n",
         "\n",
         "#batching\n",
         "batch_size = 1024\n",
-        "Nb_ex = len(Train_1)\n",
+        "Nb_ex = len(Train)\n",
         "Nb_batch = Nb_ex//batch_size + 1\n",
         "Train_1 = [Train_1[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]\n",
         "\n",
-        "Nb_ex = len(Data_1)\n",
+        "Nb_ex = len(Data)\n",
         "Nb_batch = Nb_ex//batch_size + 1\n",
-        "Data_1 = [Data_1[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]\n",
-        "\n",
-        "Nb_ex = len(Train_2)\n",
-        "Nb_batch = Nb_ex//batch_size + 1\n",
-        "Train_2 = [Train_2[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]"
+        "Data_1 = [Data_1[i*batch_size:min((i+1)*batch_size, Nb_ex)] for i in range(Nb_batch)]"
       ]
     },
     {
