--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -207,8 +207,8 @@
         "Test = D[D['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
         "Data_m = D[D['gender'] == 1]['examples'].values.tolist()\n",
         "Data_f = D[D['gender'] == -1]['examples'].values.tolist()\n",
-        "Learn = D[not(D['train'] == 0 and D['data_lbl'] == 'name')].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
-        "Test_name = D[D['train'] == 0 and D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n",
+        "Learn = D[D['train'] != 0][D['data_lbl'] != 'name'].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
+        "Test_name = D[D['train'] == 0][D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n",
         "\n",
         "#batching\n",
         "batch_size = 1024\n",
